fixed stripes on mobile (hidden)

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -188,7 +188,7 @@ main {
 
 	.stripes__container2 {
 		margin-top: 60px;
-		margin-bottom: 75px;
+		margin-bottom: 115px;
 
 		.stripe4 {
 			position: absolute;
